# direct_methods_for_solving_SLAEs

./: CMakeLists.txt  condition_number.cpp  main.cpp  main.h  multiplication.cpp  norm.cpp  print_slae.cpp  put_solution.cpp  specifications.cpp  subtraction.cpp
Gauss_method/: Gauss_method.cpp  Gauss_method.h  direct_traverse.cpp  reverse_traverse.cpp
QR_method/: QR_method.cpp
_Lab1,2/: SYS1.rar
_Lab1,2/SYS1/: DATA1.TXT  DATA10.TXT  DATA11.TXT  DATA12.TXT  DATA13.TXT  DATA14.TXT  DATA15.TXT  DATA16.TXT  DATA17.TXT  DATA18.TXT  DATA19.TXT  DATA2.TXT  DATA20.TXT  DATA21.TXT  DATA22.TXT  DATA23.TXT  DATA24.TXT  DATA25.TXT  DATA26.TXT  DATA27.TXT  DATA28.TXT  DATA29.TXT  DATA3.TXT  DATA30.TXT  DATA4.TXT  DATA5.TXT  DATA6.TXT  DATA7.TXT  DATA8.TXT  DATA9.TXT
_Lab1,2/SYS2/: P_DAT1.TXT  P_DAT12.TXT  P_DAT15.TXT  P_DAT17.TXT  P_DAT19.TXT  P_DAT20.TXT  P_DAT22.TXT  P_DAT25.TXT  P_DAT26.TXT  P_DAT28.TXT  P_DAT29.TXT  P_DAT6.TXT  P_DAT8.TXT  P_DAT9.TXT
_Lab1,2/TEST/: D0.TXT  D05.TXT  D1.TXT  D2.TXT  D3.TXT  D4.TXT  D5.TXT
parser/: parser.cpp
